docs(header): fix header overlap

--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -477,3 +477,7 @@ html {
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
+
+.blog-wrapper aside + main, .docs-wrapper aside + main {
+    padding-top: 64px;
+}
